Fixing position of dark mode toggle on mobile and tweaks to projects styling

--- a/src/components/Navigation/NavBar/NavBar.scss
+++ b/src/components/Navigation/NavBar/NavBar.scss
@@ -56,7 +56,7 @@
   .nav {
     flex-direction: row;
     align-items: center;
-    padding-left: 15px;
+    padding: 29px 18px;
 
     &__logo {
       display: none;
@@ -64,7 +64,6 @@
         display: block;
         font-family: $heading-2;
         font-size: 32px;
-        margin: 0px 0px 0px 10px;
         color: var(--text-primary);
       }
     }
@@ -85,7 +84,7 @@
       display: inline-block;
       font-size: 1.4em;
       color: var(--text-primary);
-      margin-right: 50px;
+      margin: 0px 5px;
       cursor: pointer;
     }
   }
