--- a/src/components/Navigation/NavOverlay/NavOverlay.scss
+++ b/src/components/Navigation/NavOverlay/NavOverlay.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 1000;
-  background-color: $light-grey;
+  background-color: var(--background-primary);
   transform: translateX(-100%);
   transition: transform 400ms ease-in;
 
@@ -18,7 +18,7 @@
     top: 25px;
     right: 25px;
     font-size: 1.5em;
-    color: $primary-dark;
+    color: var(--text-secondary);
     cursor: pointer;
   }
 
@@ -26,6 +26,7 @@
     font-family: $heading-2;
     font-size: 42px;
     text-align: center;
+    color: var(--text-primary);
   }
 
   &__nav {
@@ -42,13 +43,14 @@
     }
 
     &-link {
-      color: black;
+      color: var(--text-primary);
       text-decoration: none;
     }
   }
   &__socials {
     display: flex;
     justify-content: center;
+    color: var(--text-primary);
 
     &-icon {
       margin: 10px;
