--- a/src/components/Navigation/ScrollUp/ScrollUp.scss
+++ b/src/components/Navigation/ScrollUp/ScrollUp.scss
@@ -6,6 +6,7 @@
   right: 15px;
   bottom: 25px;
   position: fixed;
+  z-index: 10;
 
   &__icon {
     font-size: 3em;
